# offline-chess

./: .gitignore  .nvimrc  CMakeLists.txt  README.md
.github/workflows/: test.yml
docs/: pawn-push.md  stop-square.md
resources/games/: moves.txt
src/: CMakeLists.txt  bishop.cpp  bishop.h  board.cpp  board.h  game.cpp  game.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  move.cpp  move.h  pawn.cpp  pawn.h  piece.cpp  piece.h  piece_factory.h  player.cpp  player.h  queen.cpp  queen.h  rook.cpp  rook.h  spot.cpp  spot.h  timer.cpp  timer.h
src/engine/: board.cpp  board.h  engine.h  move.h
tests/: CMakeLists.txt  test_board.cpp
